WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21293
REGRESSION: Crash beneath RenderSVGViewportContainer::viewportTransform() during SVGSVGElement destruction
https://bugs.webkit.org/show_bug.cgi?id=21293
Summary
REGRESSION: Crash beneath RenderSVGViewportContainer::viewportTransform() dur...
mitz
Reported
2008-10-01 21:41:48 PDT
svg/custom/use-modify-target-symbol.svg crashes beneath RenderSVGViewportContainer::viewportTransform() due to calling an SVGSVGElement method on a half-destructed object.
Attachments
Step around the problem by calling detach() earlier
(2.46 KB, patch)
2008-10-01 21:48 PDT
,
mitz
mrowe
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2008-10-01 21:48:57 PDT
Created
attachment 24005
[details]
Step around the problem by calling detach() earlier
mitz
Comment 2
2008-10-01 21:54:18 PDT
Fixed in <
http://trac.webkit.org/changeset/37180
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug