        Reviewed by Mark Rowe.

- https://bugs.webkit.org/show_bug.cgi?id=21293
          REGRESSION: Crash beneath RenderSVGViewportContainer::viewportTransform() during SVGSVGElement destruction

        * svg/SVGMarkerElement.cpp:
        (WebCore::SVGMarkerElement::~SVGMarkerElement): Call detach() here so
        that renderer destruction happens before the SVGMarkerElement is
        destroyed.
        * svg/SVGSVGElement.cpp:
        (WebCore::SVGSVGElement::~SVGSVGElement): Ditto for SVGSVGElement.



Canonical link: https://commits.webkit.org/29441@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37180 268f45cc-cd09-0410-ab3c-d52691b4dbfc